--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.3",
     "@tailwindcss/vite": "^4.0.5",
     "bootstrap-icons": "^1.11.3",
     "react": "^19.0.0",
