--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.5",
     "bootstrap-icons": "^1.11.3",
     "react": "^19.0.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.5"
